--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,44 +1,15 @@
-- git_config:
-    name: alias.st
+- name: Git aliases
+  git_config:
+    name: "{{ item.name }}"
     scope: global
-    value: status
-
-- git_config:
-    name: alias.l
-    scope: global
-    value: log
-
-- git_config:
-    name: alias.lp
-    scope: global
-    value: log -p
-
-- git_config:
-    name: alias.cm
-    scope: global
-    value: commit -m
-
-- git_config:
-    name: alias.cam
-    scope: global
-    value: commit -a -m
-
-- git_config:
-    name: alias.d
-    scope: global
-    value: diff
-
-- git_config:
-    name: alias.dc
-    scope: global
-    value: diff --cached
-
-- git_config:
-    name: alias.co
-    scope: global
-    value: checkout
-
-- git_config:
-    name: alias.br
-    scope: global
-    value: branch
+    value: "{{ item.value }}"
+  with_items:
+    - {name: "alias.st", value: "status" }
+    - {name: "alias.l", value: "log" }
+    - {name: "alias.lp", value: "log -p" }
+    - {name: "alias.cm", value: "commit -m" }
+    - {name: "alias.cam", value: "commit -a -m" }
+    - {name: "alias.d", value: "diff" }
+    - {name: "alias.dc", value: "diff --cached" }
+    - {name: "alias.co", value: "checkout" }
+    - {name: "alias.br", value: "branch" }
