Playbook reduced to two roles : basic CLI tools and advanced CLI for development machine + tmux integration

--- a/site.yml
+++ b/site.yml
@@ -4,18 +4,8 @@
     - cli
     - cli-awesome
 
-- name: Local vim configuration
-  hosts: localhost
-  connection: local
-
-  roles:
-    - vim
-    - bash
-    - git
-
 - name: Deploying configuration of my tools on the dev servers
-  hosts: typo
+  hosts: dev-servers
 
   roles:
-    - vim
-    - bash
+    - cli
