--- a/roles/cli-awesome/tasks/main.yml
+++ b/roles/cli-awesome/tasks/main.yml
@@ -1,15 +1,16 @@
-- name: Install CLI base programs
+- name: Install CLI advanced programs
   package:
     name: "{{ item }}"
     state: latest
   become: true
   with_items:
     - konsole
+    - zsh
 
 - name: Creating fonts directory
   file: path=~/.local/share/fonts state=directory
 
-- name: Téléchargements des fonts
+- name: Downloading Fira Code font
   get_url:
     url: https://github.com/tonsky/FiraCode/blob/master/distr/ttf/FiraCode-{{item}}.ttf?raw=true
     dest: ~/.local/share/fonts/FiraCode-{{item}}.ttf
@@ -20,6 +21,6 @@
     - Medium
     - Retina
 
-- name: Vide le cache des fonts
+- name: Updating fonts cache
   command: fc-cache -f
   register: mymotd
