--- a/roles/cli/tasks/main.yml
+++ b/roles/cli/tasks/main.yml
@@ -5,6 +5,46 @@
   become: true
   with_items:
     - vim
-    - zsh
+    - git
     - tmux
-    - konsole
+
+# including .bash_aliases file if present
+- lineinfile:
+    dest: ~/.bashrc
+    state: present
+    line: "if [ -f ~/.bash_aliases ]; then . ~/.bash_aliases ; fi # Including .bash_aliases file if present"
+# including .bash_aliases_env, to load specific aliases to this environment
+- lineinfile:
+    dest: ~/.bashrc
+    state: present
+    line: "if [ -f ~/.bash_aliases_env ]; then . ~/.bash_aliases_env ; fi # including .bash_aliases_env, to load specific aliases to this environment"
+- name: Deploying .bash_aliases
+  template: src=.bash_aliases dest=~/.bash_aliases
+
+- name: Creating autoload directory
+  file: path=~/.vim/autoload state=directory
+- name: Creating autoload directory
+  file: path=~/.vim/plugged state=directory
+- name: Vim configuration file
+  template: src=.vimrc dest=~/.vimrc
+- name: Installing vim plugin manager Plug
+  template: src=.vim/autoload/plug.vim dest=~/.vim/autoload/plug.vim
+
+- name: Git aliases
+  git_config:
+    name: "{{ item.name }}"
+    scope: global
+    value: "{{ item.value }}"
+  with_items:
+    - {name: "alias.st", value: "status" }
+    - {name: "alias.l", value: "log" }
+    - {name: "alias.lp", value: "log -p" }
+    - {name: "alias.cm", value: "commit -m" }
+    - {name: "alias.cam", value: "commit -a -m" }
+    - {name: "alias.d", value: "diff" }
+    - {name: "alias.dc", value: "diff --cached" }
+    - {name: "alias.co", value: "checkout" }
+    - {name: "alias.br", value: "branch" }
+
+- name: Tmux configuration file
+  template: src=.tmux.conf dest=~/.tmux.conf
