--- a/roles/cli/tasks/main.yml
+++ b/roles/cli/tasks/main.yml
@@ -18,37 +18,33 @@
     dest: ~/.bashrc
     state: present
     line: "if [ -f ~/.bash_aliases_env ]; then . ~/.bash_aliases_env ; fi # including .bash_aliases_env, to load specific aliases to this environment"
-- name: Deploying .bash_aliases
-  template: src=.bash_aliases dest=~/.bash_aliases
 
+# Dotfiles
+- name: Creating dev home directory
+  file:
+    path: ~/dev/
+    state: directory
+    mode: '0755'
+- name: Dotfiles
+  git:
+    repo: https://github.com/3615Yeye/dotfiles.git
+    dest: ~/dev/dotfiles/
+- name: Synchronize dotfiles to home directory
+  synchronize:
+    src: ~/dev/dotfiles/
+    dest: ~/
+    rsync_opts:
+      - "--exclude=.git"
+
+# Vim Plugins
 - name: Creating directories for Vim
   file: path={{ item }} state=directory
   with_items:
       - ~/.vim/autoload
       - ~/.vim/plugged
-- name: Moving file for Vim
-  template: src={{ item.src }} dest={{ item.dest }}
-  with_items:
-    - {src: ".vimrc", dest: "~/.vimrc" }
-    - {src: ".vim/autoload/plug.vim", dest: "~/.vim/autoload/plug.vim" }
+- name: Downloading Plug package manager for Vim
+  get_url:
+    url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+    dest: ~/.vim/autoload/plug.vim
 - name: Installing Vim plugins
   command: 'vim +PlugInstall +qall'
-
-- name: Git aliases
-  git_config:
-    name: "{{ item.name }}"
-    scope: global
-    value: "{{ item.value }}"
-  with_items:
-    - {name: "alias.st", value: "status" }
-    - {name: "alias.l", value: "log" }
-    - {name: "alias.lp", value: "log -p" }
-    - {name: "alias.cm", value: "commit -m" }
-    - {name: "alias.cam", value: "commit -a -m" }
-    - {name: "alias.d", value: "diff" }
-    - {name: "alias.dc", value: "diff --cached" }
-    - {name: "alias.co", value: "checkout" }
-    - {name: "alias.br", value: "branch" }
-
-- name: Tmux configuration file
-  template: src=.tmux.conf dest=~/.tmux.conf
