Gnome tweaks + dev tools : fzf fuzzy finder and ripgrep

--- a/roles/dev-tools/tasks/main.yml
+++ b/roles/dev-tools/tasks/main.yml
@@ -17,6 +17,9 @@
     - s-tui
     - ranger
     - fonts-firacode
+    - gnome-tweaks
+    - fzf
+    - ripgrep
 
 - name: Adding user ronan to docker group
   user:
