--- a/roles/dev-tools/tasks/main.yml
+++ b/roles/dev-tools/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: apt update
+  apt:
+    update_cache: yes
+  become: true
+
 - name: Programs installation
   package:
     name: "{{ item }}"
@@ -10,8 +15,6 @@
     - alacritty
     - tmux
     - tmuxinator
-    - docker
-    - docker-compose
     - tree
     - stress
     - s-tui
@@ -37,3 +40,41 @@
     block: |
       if [ -f ~/.bash_aliases ]; then . ~/.bash_aliases ; fi # Including .bash_aliases file if present
       if [ -f ~/.bash_aliases_env ]; then . ~/.bash_aliases_env ; fi # including .bash_aliases_env, to load specific aliases to this environment
+
+- name: Install prerequisites for Docker repository
+  apt:
+    pkg:
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - gnupg2
+    - software-properties-common
+  become: true
+
+- name: add docker apt key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+  become: true
+
+- name: add docker apt repo
+  apt_repository:
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+    state: present
+  become: true
+
+- name: install docker and it's dependencies
+  apt:
+    pkg:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+    state: present
+  become: true
+
+- name: start and enable docker daemon
+  service:
+    name: docker
+    state: started
+    enabled: yes
+  become: true
